# ts-examples

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  strtol_shim.c  test-svm.cjs  vitest.config.ts
src/: generate-depth-html.ts  setup.ts
src-rs/: README.md  setup.rs
src-rs/quickstart/: 01-init-pool.rs  02-read-pool.rs  03-write-pool.rs
src-ts/quickstart/: 01-initialize-pool.ts
src/quickstart/: 01-initialize-pool.test.ts  02-read-pool-state.test.ts  03-write-pool-updates.test.ts  04-spread-config.test.ts
src/simulations/: 01-depth-curves.test.ts  01-depth-curves.ts  02-interpolation-comparison.test.ts  02-interpolation-comparison.ts  fetch-sim-cache.ts
